--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 
 body,
 html {
+  box-sizing: border-box;
   font-family: "Sofia Sans Semi Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
